--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+flask = "*"
+flask-react = "*"
+flask-jwt-auth = "*"
+flask-rest = "*"
 
 [dev-packages]
 
